[package]
name = "eaw-mod-repack"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
color-print = "0.3.7"
env_logger = "0.11.10"
log = "0.4.30"
petro-meg = { version = "1.0.5", default-features = false, features = ["v1", "reader", "writer"] }
serde = "1.0.228"
serde_json = "1.0.150"
xml = "1.2.1"

[dev-dependencies]
tempfile = "3.27.0"
